Trying to fix home page background image on mobile

--- a/website_frontend/src/pages/Home.module.css
+++ b/website_frontend/src/pages/Home.module.css
@@ -263,8 +263,8 @@
 }
 
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 500px) {
     .sectionOne {
-        background-position: 30%;
+        background-position: 20% 20%;
     }
 }
